--- a/MDCVersion/scss/style.scss
+++ b/MDCVersion/scss/style.scss
@@ -39,6 +39,14 @@
   margin-bottom: 13px
 }
 
+#payment_request_security_code::placeholder {
+  color: #6e7396;
+}
+
+.grey-placeholder {
+  color: #6e7396 !important;
+}
+
 // Overwrite MDC default style
 // Input text color
 .mdc-text-field:not(.mdc-text-field--focused) {
@@ -52,7 +60,7 @@
   @include mdc-text-field-caret-color(#1c70f2);
 }
 
-.mdc-text-field.mdc-text-field--focused .mdc-text-field__input:required ~ .mdc-notched-outline .mdc-floating-label::after {
+.mdc-text-field.mdc-text-field--focused:not(.mdc-text-field--invalid) .mdc-text-field__input:required ~ .mdc-notched-outline .mdc-floating-label::after {
   color: #1c70f2;
 }
 
